Add quick deployment guide and fix .gitignore for Streamlit config

--- a/.gitignore
+++ b/.gitignore
@@ -82,5 +82,5 @@ Thumbs.db
 temp_*.stl
 *.log
 
-# Ignore Streamlit files
-.streamlit/
+# Ignore Streamlit local cache (but keep config)
+.streamlit/secrets.toml
